# stocks-ai-agent

./: .env.example  README.md  pyproject.toml  requirements.txt
src/: __init__.py  agent.py  config.py  main.py
src/analysis/: __init__.py  fundamental.py  sentiment.py  technical.py
src/data/: __init__.py  news_scraper.py  tase_client.py  yahoo_client.py
src/llm/: __init__.py  gemini_client.py
src/rules/: __init__.py  scoring.py  strategies.py
tests/: __init__.py  conftest.py  test_fundamental.py  test_scoring.py  test_technical.py
